sort.pancake.GatesPancake.scala.error
Erreur de compilation :
GatesPancake:48: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estLibre(0) && tplus1 != 9999 && estLibre(tplus1)){
  ^GatesPancake:52: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estLibre(0) && tmoins1 != 9999 && estLibre(tmoins1)){
  ^GatesPancake:56: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return false
  ^